--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -31,7 +31,8 @@
     border: 2px solid rgb(213, 213, 213);
     background-color: white;
     color: rgb(113, 113, 113);
-    height: 20px;
+    // height: 20px;
+    height: 120px;
     font-size: 16px;
     padding: 10px;
     margin-bottom: 10px;
@@ -39,9 +40,13 @@
 
 .comment-textarea:focus {
     outline-width: 0;
-    box-shadow: inset 0 0 6px rgba(134, 146, 230, 1);
-    height: 120px;
 }
+
+// .comment-textarea:focus {
+//     outline-width: 0;
+//     box-shadow: inset 0 0 6px rgba(134, 146, 230, 1);
+//     height: 120px;
+// }
 
 .comment-submit-button {
     border: 3px solid rgb(84, 200, 53);
