--- a/app/assets/stylesheets/nav-head.scss
+++ b/app/assets/stylesheets/nav-head.scss
@@ -98,12 +98,9 @@
 .nav-bar-list-ul {
     display: flex;
     list-style-type: none;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    width: 36%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 0;
+    width: 100%;
 }
 
 .nav-bar-item {
@@ -123,13 +120,13 @@
     font-weight: 700;
     font-size: small;
     color: white;
-    padding-right: 5px;
-    padding-left: 5px;
+    padding: 0 35px;
     margin-bottom: 2px;
 }
 
 .nav-bar-icons-li {
     display: flex;
+    justify-content: space-between;
 }
 
 .nav-bar-item-icon {
@@ -137,7 +134,7 @@
     font-weight: 700;
     font-size: small;
     color: white;
-    padding-right: 25px;
+    margin-right: 26px;
 }
 
 .nav-bar-item-icon:hover {
@@ -187,17 +184,15 @@
 
 .footer-container {
     background-color: rgb(18, 18, 18);
-    height: 600px;
     color: white;
-    padding-left: 365px;
-    padding-right: 365px;
-    padding-top: 75px;
+    padding: 75px 365px 75px;
 }
 
 .footer-tagline {
     font-size: 36px;
     font-weight: 400;
-    width: 60%;
+    max-width: 700px;
+    min-width: 380px;
 }
 
 .footer-list-ul {
@@ -206,6 +201,7 @@
     padding-top: 20px;
     height: auto;
     width: 100%;
+    white-space: nowrap;
 }
 .footer-list-li {
     height: auto;
@@ -219,10 +215,11 @@
 
 .footer-gen {
     text-decoration: none;
-    padding-top: 200px;
+    margin-top: 150px;
     font-size: 16px;
     font-weight: 400;
     color: white;
+    white-space: nowrap;
 }
 
 .footer-byline {
@@ -230,10 +227,12 @@
     font-size: 12px;
     font-weight: 400;
     color: white;
+    white-space: nowrap;
 }
 
 .footer-disclaimer {
     padding-top: 30px;
     font-size: 11px;
     font-weight: 400;
+    min-width: 320px;
 }
