--- a/app/assets/stylesheets/tracks-show.scss
+++ b/app/assets/stylesheets/tracks-show.scss
@@ -17,6 +17,7 @@
 .tracks-show-hed-container {
     background-color: rgba(0, 0, 0, 0.6);
     width: 60%;
+    min-width: 485px;
     height: 100%;
     display: inline-block;
 }
