--- a/app/assets/stylesheets/nav-head.scss
+++ b/app/assets/stylesheets/nav-head.scss
@@ -1,12 +1,25 @@
 .ingenious-app {
     width: 100%;
     height: 100%;
+    min-width: 540px;
+
+    // @media screen and (max-width: 1040px) {
+    //     max-width: 1040px;
+    // };
+
+    @media screen and (max-width: 600px) {
+        max-width: 600px;
+    };
 }
 
 .main-header-container {
     display: block;
     width: 100%;
     height: 41px;
+
+    @media screen and (max-width: 1040px) {
+        width: 100%;
+    };
 }
 
 .main-header {
@@ -19,12 +32,20 @@
     font-family: Geneva, sans-serif;
     width: 100%;
     height: 100%;
+
+    @media screen and (max-width: 1040px) {
+        justify-content: center;
+    };
 }
 
 .search-bar-container {
     display: flex;
     flex: 1;
     margin-left: 5px;
+
+    @media screen and (max-width: 1040px) {
+        display: none;
+    };
 }
 
 .search-bar-input {
@@ -72,6 +93,12 @@
     flex: 1;
     justify-content: flex-end;
     white-space: nowrap;
+
+    @media screen and (max-width: 1040px) {
+        justify-content: inherit;
+        flex: inherit;
+        padding-left: 15px;
+    };
 }
 
 .session-btn {
@@ -93,6 +120,10 @@
     display: flex;
     height: 41px;
     text-align: center;
+
+    @media screen and (max-width: 1040px) {
+        width: 100%;
+    };
 }
 
 .nav-bar-list-ul {
@@ -101,6 +132,10 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+
+    @media screen and (max-width: 1040px) {
+        padding: 0px;
+    };
 }
 
 .nav-bar-item {
@@ -122,6 +157,10 @@
     color: white;
     padding: 0 35px;
     margin-bottom: 2px;
+
+    @media screen and (max-width: 1040px) {
+        padding: 0 10px;
+    };
 }
 
 .nav-bar-icons-li {
@@ -135,6 +174,10 @@
     font-size: small;
     color: white;
     margin-right: 26px;
+
+    @media screen and (max-width: 1040px) {
+        margin-right: 11px;
+    };
 }
 
 .nav-bar-item-icon:hover {
@@ -185,14 +228,20 @@
 .footer-container {
     background-color: rgb(18, 18, 18);
     color: white;
-    padding: 75px 365px 75px;
+    padding: 75px 0 75px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .footer-tagline {
     font-size: 36px;
     font-weight: 400;
-    max-width: 700px;
-    min-width: 380px;
+    width: 55%;
+
+    @media screen and (max-width: 1040px) {
+        width: 40%;
+    };
 }
 
 .footer-list-ul {
@@ -200,9 +249,14 @@
     padding-left:0;
     padding-top: 20px;
     height: auto;
-    width: 100%;
     white-space: nowrap;
+    width: 55%;
+
+    @media screen and (max-width: 1040px) {
+        width: 40%;
+    };
 }
+
 .footer-list-li {
     height: auto;
     width: auto;
@@ -220,6 +274,11 @@
     font-weight: 400;
     color: white;
     white-space: nowrap;
+    width: 55%;
+
+    @media screen and (max-width: 1040px) {
+        width: 40%;
+    };
 }
 
 .footer-byline {
@@ -228,11 +287,20 @@
     font-weight: 400;
     color: white;
     white-space: nowrap;
+    width: 55%;
+
+    @media screen and (max-width: 1040px) {
+        width: 40%;
+    };
 }
 
 .footer-disclaimer {
     padding-top: 30px;
     font-size: 11px;
     font-weight: 400;
-    min-width: 320px;
+    width: 55%;
+
+    @media screen and (max-width: 1040px) {
+        width: 40%;
+    };
 }
