--- a/app/assets/stylesheets/tracks-show.scss
+++ b/app/assets/stylesheets/tracks-show.scss
@@ -15,6 +15,7 @@
 .tracks-show-hed-container {
     background-color: rgba(0, 0, 0, 0.6);
     width: 60%;
+    min-width: 480px;
     display: inline-block;
     padding: 32px 0;
 }
