--- a/app/assets/stylesheets/annotations.scss
+++ b/app/assets/stylesheets/annotations.scss
@@ -2,12 +2,19 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.anno-comments-outer-cont {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 20px;
+    min-width: 500px;
+}
 
 .anno-show-lyrics-container {
-    width: 60%;
-    min-width: 485px;
-    height: 100%;
     background-color: white;
+    width: 60%;
+    height: 100%;
+    min-width: 480px;
     margin: 0 auto;
     padding-bottom: 50px;
     display: flex;
@@ -26,7 +33,7 @@
 
 .anno-show-lyrics {
     width: 67%;
-    min-width: 285px;
+    min-width: 290px;
     padding-top: 15px;
     padding-left: 15px;
     font-size: 18px;
@@ -232,7 +239,6 @@
      outline-width: 0;
 }
 
-
 //annotation form EDIT version
 .anno-form-container-edit {
     width: 100%;
@@ -313,13 +319,13 @@
      outline-width: 0;
 }
 
-
 //log in to annotate version
 .anno-login-container {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: flex-end;
+    padding-left: 10px;
 }
 
 .anno-login-border-bar {
@@ -359,8 +365,6 @@
     }
 }
 
-
-
 .highlight {
     background-color: #e06f6f;
 }
@@ -368,7 +372,6 @@
 .custom-class {
     background-color: #e06f6f;
 }
-
 
 .highlighted-annotated-lyric {
     background-color: rgb(213, 213, 213);
