--- a/app/assets/stylesheets/nav-head.scss
+++ b/app/assets/stylesheets/nav-head.scss
@@ -1,11 +1,7 @@
 .ingenious-app {
     width: 100%;
     height: 100%;
-    min-width: 540px;
-
-    // @media screen and (max-width: 1040px) {
-    //     max-width: 1040px;
-    // };
+    min-width: 580px;
 
     @media screen and (max-width: 600px) {
         max-width: 600px;
@@ -292,6 +288,14 @@
     @media screen and (max-width: 1040px) {
         width: 40%;
     };
+}
+
+.footer-byline-link {
+    color: white;
+}
+
+.footer-byline-link:hover {
+    color: rgb(254, 0, 98);
 }
 
 .footer-disclaimer {
